set(TARGET_NAME Coroutine_base)


file(GLOB_RECURSE EDITOR_HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
#file(GLOB_RECURSE EDITOR_SOURCES_C CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
file(GLOB_RECURSE EDITOR_SOURCES_CPP CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
#file(GLOB_RECURSE EDITOR_RESOURCE CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.rc)


add_library(${TARGET_NAME} ${EDITOR_HEADERS} ${EDITOR_SOURCES_CPP})
target_link_libraries(${TARGET_NAME} common_base)

include_directories(${PROJECT_SOURCE_DIR})